namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard

---
apiVersion: v1
kind: Namespace
metadata:
  name: registry

---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner

---
