dashboard.ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  creationTimestamp: null
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: kubernetes-dashboard.k3s.bla-bla.local
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
